# pdf2hwpx

./: .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  pyproject.toml
pdf2hwpx/: __init__.py  cli.py  core.py  mcp_server.py
pdf2hwpx/api/: __init__.py  billing.py  server.py
pdf2hwpx/converter/: __init__.py  hwpx_builder.py  pdf_metadata_to_hwpx.py
pdf2hwpx/hwpx_ir/: __init__.py  base.py  hwpx_reader.py  hwpx_writer.py  models.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/components/: __init__.py
pdf2hwpx/hwpx_ir/components/bookmark/: __init__.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/components/caption/: __init__.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/components/comment/: __init__.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/components/equation/: __init__.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/components/field/: __init__.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/components/footnote/: __init__.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/components/header/: __init__.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/components/hyperlink/: __init__.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/components/image/: __init__.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/components/list/: __init__.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/components/package/: __init__.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/components/paragraph/: __init__.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/components/query/: __init__.py  editor.py  searcher.py
pdf2hwpx/hwpx_ir/components/section/: __init__.py  reader.py  writer.py
pdf2hwpx/hwpx_ir/presets/: __init__.py  base.py  official_document.py
pdf2hwpx/ocr/: __init__.py  base.py  cloud.py  gemini.py  mineru.py  openai.py  openrouter.py  pymupdf.py  vllm.py
(+9 files in other folders)
