[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf2hwpx"
version = "0.1.0"
description = "PDF를 HWPX(한글 문서)로 변환하는 라이브러리"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "ubermensch1218" }
]
keywords = ["pdf", "hwpx", "hwp", "ocr", "korean", "document", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "httpx>=0.25.0",
    "lxml>=5.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
ocr = [
    "pdf2image>=1.16.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
all = [
    "pdf2hwpx[ocr,api]",
]

[project.scripts]
pdf2hwpx = "pdf2hwpx.cli:main"

[project.urls]
Homepage = "https://github.com/ubermensch1218/pdf2hwpx"
Documentation = "https://pdf2hwpx.com/docs"
Repository = "https://github.com/ubermensch1218/pdf2hwpx"
Issues = "https://github.com/ubermensch1218/pdf2hwpx/issues"

[tool.hatch.build.targets.wheel]
packages = ["pdf2hwpx"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
